_sass/_layout.scss
html, body, main {
  @include stick-overflow();
}

/**
 * Site header
 */
header {
  height: 57px;
  position: absolute;
  top: 0;
  width: 100%;
  left: 0;
  border-bottom: 4px solid $red-color;
  background-color: $blue-dark;
  z-index: 10;
  overflow: hidden;
  transform: translateY(0);
  -webkit-transition: transform 0.3s;
  -moz-transition: transform 0.3s;
  transition: transform .3s;
  -webkit-backface-visibility: hidden; /* Chrome, Safari, Opera */
  backface-visibility: hidden;
  box-shadow: 0 3px 15px 0px #3e3e3e;

  .wrapper {
    @include flex-display();
    @include justify-content(space-between);
    @include align-items(center);
    @include flex-direction(row-reverse);
  }
}

#menu-reveal {
  -webkit-appearance: none;
  border: none;
  color: #fff;
  background: none;
  font-size: 24px;
  text-align: left;
  outline: none !important;
  cursor: pointer;
}

.site-title {
  font-size: 26px;
  line-height: 56px;
  letter-spacing: -1px;
  margin-bottom: 0;
  @include flex(1, 1, auto);

  &,
  &:visited {
    color: #fff;
  }
}

.site-nav {
  @include flex-display();
  @include flex-direction(column);
  padding-top: 7px;

  .page-link {
    color: $black;
    line-height: $base-line-height;

    // Gaps between nav items, but not on the first one
    &:not(:first-child) {
      margin-left: 20px;
    }
  }
}

/**
 * Content Layout
 */
main {
  -webkit-perspective: 1500px;
  perspective: 1500px;
  -webkit-perspective-origin: 0% 50%;
  perspective-origin: 0% 50%;;

  &:after {
    position: absolute;
    top: 0;
    left: 0;
    width: 0;
    height: 0;
    display: block;
    z-index: 9;
    content: '';
    opacity: 0;
    -webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
    transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
  }
}

#page-body {
  position: relative;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  perspective: 1000px;
  z-index: 8;
  -webkit-transition: -webkit-transform 0.5s;
  transition: transform 0.5s;
  background-color: $background-swatch;

  @include media-query($on-palm) {
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
  }
}

aside {
  position: absolute;
  right: 0;
  top: 55px;
  z-index: 1;
  width: 300px;
  height: calc(100% - 55px);
  background-color: $blue-primary;
  overflow: hidden;
  visibility: hidden;
  opacity: 1;
  -webkit-transform: translate3d(0, 0, 300px);
  transform: translate3d(0, 0, 300px);
  transition: all 0.5s;
}

section {
  position: relative;
  padding-bottom: 5em;

  &:nth-child(even) {
    background-color: $blue-primary;
    color: white;

    a {
      color: $blue-alt;
    }
  }

  &:nth-child(odd) .section-header {
    color: $blue-primary;
  }

  > .wrapper {
    padding-bottom: 5em;
  }

	.section-header {
		text-align: center;
		font-style: italic;
		font-size: 48pt;
		font-family: $fancy-font;
	}

  @include media-query($on-palm) {
    padding-bottom: 1rem;

    .section-header {
      font-size: 3.2rem;
    }

    > .wrapper {
      padding-bottom: 1rem;
    }
  }
}

.section-body {
  position: relative;
}

/**
 * Header and Sidebar Animations
 */

body {
  &.no-header {
    .site-header {
      transform: translateY(-100%);
    }
  }

  &.sidebar {
    .site-header {
      transform: translateY(0);
    }
    aside {
      visibility: visible;
      -webkit-transition: -webkit-transform 0.5s;
      transition: transform 0.5s;
      -webkit-transform: translate3d(0, 0, 0);
      transform: translate3d(0, 0, 0);
    }
    #page-body {
      -webkit-transform: translate3d(-300px, 0, 0);
      transform: translate3d(-300px, 0, 0);
    }

    main:after {
      width: calc(100% - 300px);
      height: 100%;
      opacity: 1;
      -webkit-transition: opacity 0.5s;
      transition: opacity 0.5s;
    }
  }
}

